fix:layout shift due to input border width

--- a/src/components/ProgressForm/ProgressForm.module.scss
+++ b/src/components/ProgressForm/ProgressForm.module.scss
@@ -58,7 +58,7 @@ $theme-focusHighlight: #1c64f2;
 }
 
 .input:focus {
-    border: 1px solid $theme-focusHighlight;
+    border: 2px solid $theme-focusHighlight;
     outline: none;
 }
 
